# paravon

./: .gitignore  README.md  paraconf.yaml  paranode.yaml  pyproject.toml
.github/workflows/: ci.yaml
paractl/: __main__.py
paractl/bootstrap/: cli.py  deps.py
paractl/bootstrap/commands/: admin.py  client.py  config.py
paractl/core/: client.py  cmd.py  dispatcher.py  loader.py  model.py  utils.py
paractl/core/ports/: render.py
paractl/infra/: format_renderer.py
paravon/: __main__.py
paravon/bootstrap/: boot.py  deps.py
paravon/bootstrap/config/: loader.py  settings.py
paravon/bootstrap/handlers/: api.py  peer.py
paravon/core/: controlplane.py  facade.py
paravon/core/cluster/: gossiper.py  phi.py  probe.py  table.py
paravon/core/connections/: client.py  handler.py  pool.py
paravon/core/gossip/: bucket.py  gossiper.py  table.py
paravon/core/helpers/: hlc.py  lock.py  lww.py  spawn.py  utils.py
paravon/core/models/: config.py  membership.py  message.py  meta.py  request.py  state.py  version.py
paravon/core/ports/: conflict.py  serializer.py  storage.py
paravon/core/routing/: app.py  router.py
paravon/core/service/: bootstrapper.py  coordinator.py  lifecycle.py  meta.py  node.py  storage.py  topology.py
paravon/core/space/: partition.py  ring.py  vnode.py
paravon/core/storage/: codec.py  deprecated_versioned.py  partitioned.py  versioned.py
paravon/core/throttling/: backoff.py  cubic.py  ratelimiter.py
paravon/core/transport/: application.py  flow.py  protocol.py  server.py  stream.py
paravon/infra/: lmdb_storage.py  msgpack_serializer.py
paravon/infra/lmdb_storage/: aiobackend.py  backend.py
tests/: conftest.py  helpers.py  utils.py
tests/core/: test_bucket_table.py  test_flow_control.py  test_message_server.py  test_meta_manager.py  test_partition.py  test_peer_clients.py  test_ring.py  test_routed_app.py  test_router.py  test_topology.py  test_transport_protocol.py  test_transport_streamer.py
tests/core/throttling/: test_cubic_rate_limiter.py  test_exponential_backoff.py
tests/fake/: fake_send_receive.py  fake_storage.py  fake_transport.py
tests/infra/: test_lmdb_backend.py  test_versioned_storage.py
tests/it/: test_versioned_storage.py
tests/it/infra/: test_lmdb_backend.py  test_lmdb_storage.py
tests/ut/core/: test_addr.py  test_bucket.py  test_coordinator.py  test_hashspace.py  test_message_server.py  test_meta_manager.py  test_partitioned_storage.py  test_phi.py  test_probe.py  test_ring.py  test_routed_app.py  test_subscription.py  test_transport_streamer.py
tests/ut/core/throttling/: test_cubic_controller.py
