[build-system]
requires = ["setuptools>=80.10.2"]
build-backend = "setuptools.build_meta"

[project]
name = "paravon"
version = "0.0.1"
description = "Paravon is a leaderless, peer‑to‑peer distributed database blending strong per‑key consistency with deterministic global convergence."
authors = [
    { name = "Souleymane BA", email = "soulsmister@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14"
keywords = ["distributed-systems", "database", "key-value", "AP"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Topic :: Database",
  "Topic :: Database :: Database Engines/Servers",
  "Topic :: System :: Distributed Computing",
  "Topic :: System :: Networking",
  "Topic :: Utilities",
]


dependencies = [
    "msgpack==1.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2"
]

[project.urls]
Homepage = "https://github.com/mistersouls/paravon"
Repository = "https://github.com/mistersouls/paravon"

