[build-system]
requires = ["setuptools>=80.10.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["paractl", "paravon"]


[project]
name = "paravon"
version = "0.0.1"
description = "Paravon is a leaderless, peer‑to‑peer distributed database blending strong per‑key consistency with deterministic global convergence."
authors = [
    { name = "Souleymane BA", email = "soulsmister@gmail.com" }
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.14"
keywords = ["distributed-systems", "database", "key-value", "AP"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Topic :: Database",
  "Topic :: Database :: Database Engines/Servers",
  "Topic :: System :: Distributed Computing",
  "Topic :: System :: Networking",
  "Topic :: Utilities",
]


dependencies = [
    "msgpack==1.1.2",
    "pydantic==2.12.5",
    "pydantic-settings[yaml]==2.12.0",
    "lmdb==1.7.5"
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "cryptography==46.0.3",
    "flake8==7.3.0"
]

[project.urls]
Homepage = "https://github.com/mistersouls/paravon"
Repository = "https://github.com/mistersouls/paravon"


[tool.pytest.ini_options]
markers = [
    "ut: unit tests",
    "it: integration tests"
]
addopts = "--cov=paravon --cov-report=term-missing"
